--- a/AEDFirst.csproj
+++ b/AEDFirst.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Extensions\UtilizExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -187,6 +188,7 @@
     <Compile Include="Models\AddDocumentViewModel.cs" />
     <Compile Include="Models\CatDossierViewModel.cs" />
     <Compile Include="Models\CATEGORIESDOSSIERS.cs" />
+    <Compile Include="Models\DeplacerDocViewModel.cs" />
     <Compile Include="Models\DOCUMENTS.cs" />
     <Compile Include="Models\DOSSIERS.cs" />
     <Compile Include="Models\DROITS.cs" />
@@ -3878,6 +3880,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Corbeille\" />
     <Folder Include="Data\" />
     <Folder Include="UploadedFiles\" />
     <Folder Include="Views\Dossier\" />
