--- a/Web.config
+++ b/Web.config
@@ -9,9 +9,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-AEDFirst-20230512122009.mdf;Initial Catalog=aspnet-AEDFirst-20230512122009;Integrated Security=True" providerName="System.Data.SqlClient" />
-    <!--<add name="ModelAED" connectionString="data source=TENGOKU;initial catalog=AEDDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="ModelAED" connectionString="data source=TENGOKU;initial catalog=AEDDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="ModelAED" connectionString="data source=DESKTOP-8S7GMAN;initial catalog=AEDDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
